# results_WetEtching

./: Vtp Reader.py  vtpToSTL.py
DIF_PROF/: MASK.vtp  resultados.txt
ILHA/1/: DISP_SUBTRAIDO.stl  DISP_TESTE.stl  DISP_TESTE.vtu  plane248.vtk  plane325.vtk  plane483.vtk  plane618.vtk  resultados.txt
ILHA/2/: resultados.txt
ILHA/3/: ARQ_FINAL.vtp  DISP_SUBTRAIDO2.stl  MASK.stl  MASK.vtp  VOLUME2.txt  resultados.txt  vtpToSTL.py
VIGA MENOR/1/: DISP_SUBTRAIDO.stl  DISP_SUBTRAIDO2.stl  MASK.stl  MASK.vtp  resultados.txt
VIGA MENOR/2/: ARQ_FINAL.vtp  DISP_SUBTRAIDO2.stl  DISP_TESTE.vtu  VOLUME2.txt  resultados.txt
VIGA MENOR/3/: DISP_SUBTRAIDO2.stl  resultados.txt
VIGA/1/: DISP_SUBTRAIDO.stl  DISP_TESTE.vtu  MASK.stl  resultados.txt
VIGA/2/: DISP_SUBTRAIDO2.stl  VOLUME2.txt  resultados.txt
VIGA/3/: ARQ_FINAL.vtp  MASK.vtp  resultados.txt
dif prof./: ARQ_FINAL.vtp  DISP_TESTE.vtu  VOLUME.txt  VOLUME2.txt
test/: CMakeLists.txt  test.cpp  test2.gds
